objects/Case.object
<CustomObject>
    <fields>
        <fullName>AutomotiveSector__c</fullName>
        <label>Automotive sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GADSL List</fullName>
                </value>
                <value>
                    <fullName>IMDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://sk-fp--skdevpro.lightning.force.com/lightning/r/Case/&quot; &amp; Id &amp; &quot;/view&quot;,Case_ID__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Eurasia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescriptionCountry__c</fullName>
        <label>Description (country)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Eurasia</fullName>
                </value>
                <value>
                    <fullName>US (TSCA)</fullName>
                </value>
                <value>
                    <fullName>Canada (DSL)</fullName>
                </value>
                <value>
                    <fullName>Japan (ENCS/ISHL)</fullName>
                </value>
                <value>
                    <fullName>China (IECSC)</fullName>
                </value>
                <value>
                    <fullName>Korea (KECI)</fullName>
                </value>
                <value>
                    <fullName>Philippines (PICCS)</fullName>
                </value>
                <value>
                    <fullName>Australia (AIICS)</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND (NZIOC)</fullName>
                </value>
                <value>
                    <fullName>TAIWAN (TCSI)</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Details__c</fullName>
        <inlineHelpText>To fill only if &quot;Other&quot; is selected.</inlineHelpText>
        <label>Description details</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoodContact__c</fullName>
        <label>Food Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>MERCOSUR / ANVISA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_contact_details__c</fullName>
        <description>Required FDA clearance or regulation / Application [type of food, conditions of use (T/duration), carrier polymer, structure (thickness of layers/container size)]</description>
        <label>Food contact details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDCustomer__c</fullName>
        <label>ID of customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalCstomerMaterialNumber__c</fullName>
        <inlineHelpText>To fill only if IMDS is selected</inlineHelpText>
        <label>Internal customer material number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalReference__c</fullName>
        <label>Internal reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternationalInventories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International inventories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_list__c</fullName>
        <label>Inventory list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US (TSCA)</fullName>
                </value>
                <value>
                    <fullName>Canada (DSL)</fullName>
                </value>
                <value>
                    <fullName>Japan (ENCS/ISHL)</fullName>
                </value>
                <value>
                    <fullName>China (IECSC)</fullName>
                </value>
                <value>
                    <fullName>Korea (KECI)</fullName>
                </value>
                <value>
                    <fullName>Philippines (PICCS)</fullName>
                </value>
                <value>
                    <fullName>Australia (AIICS)</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND (NZIOC)</fullName>
                </value>
                <value>
                    <fullName>TAIWAN (TCSI)</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NBD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others (ex: medical device)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductComposition__c</fullName>
        <label>Product Composition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absence of Substances</fullName>
                </value>
                <value>
                    <fullName>Heavy metals / TOYS</fullName>
                </value>
                <value>
                    <fullName>RoHS</fullName>
                </value>
                <value>
                    <fullName>Origin (animal/vegetal/synthetic, GMO, BSE/TSE, Halal/Kosher)</fullName>
                </value>
                <value>
                    <fullName>California Prop 65</fullName>
                </value>
                <value>
                    <fullName>CMRT (Conflict Mineral)</fullName>
                </value>
                <value>
                    <fullName>POP (Persistant Organic Pollutant)</fullName>
                </value>
                <value>
                    <fullName>CAS number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_composition_details__c</fullName>
        <label>Product composition details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REACH__c</fullName>
        <label>REACH</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REACH Status</fullName>
                </value>
                <value>
                    <fullName>SVHC</fullName>
                </value>
                <value>
                    <fullName>Other REACH questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReachDetails__c</fullName>
        <label>Reach details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS/Safety Data Sheet</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>VR01_FillDescriptionDetailsIfOthersSelec</fullName>
        <active>true</active>
        <description>it is mandatory to fill &quot;Description details&quot; field if &quot;others&quot; is selected.</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
AND(Others__c ),
ISBLANK(Description_Details__c ) 
)</errorConditionFormula>
        <errorMessage>Please, fill the Description Details field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR02_MandatoryCountryRegionIfReachStatus</fullName>
        <active>true</active>
        <description>it is mandatory to fill  &quot;Country/region&quot; field if &quot;Reach satuts&quot; picklist value is selected in the &quot;reach field&quot;</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
INCLUDES( REACH__c , &apos;REACH Status&apos;),
ISBLANK(Country_Region__c ) 
)</errorConditionFormula>
        <errorMessage>Please, fill the Country/Region field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR03_MandatoryReachDetailsHSE</fullName>
        <active>true</active>
        <description>it is mandatory to fill  &quot;Reach details&quot; field if &quot;Other Reach questions &quot; picklist value is selected in the &quot;reach field&quot;</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
INCLUDES( REACH__c , &apos;Other REACH questions&apos;),
ISBLANK(ReachDetails__c)
)</errorConditionFormula>
        <errorMessage>Please, fill the Reach Details field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR04_MandatoryInvertoryListHSE</fullName>
        <active>true</active>
        <description>it is mandatory to fill &quot;Inventory list&quot; field if &quot;International inventories is checked&quot;</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
AND(InternationalInventories__c),
ISBLANK(Inventory_list__c)
)</errorConditionFormula>
        <errorMessage>Please, fill the Inventory List field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR05_MandatoryIDofCustomer</fullName>
        <active>true</active>
        <description>It is mandatory to fill &quot;Id of customer&quot; field if &quot;IMDS&quot; picklist value is selected in the &quot;Automotive sector field&quot;</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
INCLUDES( AutomotiveSector__c  , &apos;IMDS&apos;),  
				ISBLANK( IDCustomer__c)
)</errorConditionFormula>
        <errorMessage>Please, fill the ID Customer field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR06_MandatoryProductCompositionDetails</fullName>
        <active>true</active>
        <description>It is mandatory to fill &quot;product composition details&quot; field if &quot;other&quot; picklist value is selected in the &quot;Product composition&quot; field .</description>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
INCLUDES( ProductComposition__c , &apos;Other&apos;),
ISBLANK(Product_composition_details__c)
)</errorConditionFormula>
        <errorMessage>Please, fill the Product Composition Details field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR07_MandatoryFinalAnswer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
ISPICKVAL(Status, &quot;Closure&quot;),   
LEN(Final_Answer__c) = 0
)</errorConditionFormula>
        <errorMessage>Please, add a value for &apos;Final answer&apos; before closing the case.</errorMessage>
    </validationRules>
</CustomObject>